[package]
name = "rbf"
version = "0.2.0"
authors = ["Rafael Bachmann <rafael.bachmann.93@gmail.com>"]
description = "Super simple const generics based ring buffer implementation for no_std"
repository = "https://github.com/barafael/rbf-rs"
license-file = "LICENSE"
edition = "2018"

[dependencies]
embedded-io = "0.6.1"
thiserror = { version = "2.0.3", default-features = false }
